apps/internal/jupyter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svc-jupyter
  labels:
    gitops: flux
