apps/internal/jupyter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter
  namespace: svc-jupyter
  labels:
    app: jupyter
spec:
  type: ClusterIP
  selector:
    app: jupyter
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
