apps/internal/jupyter/netpol-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jupyter-from-internal-ingress
  namespace: svc-jupyter
spec:
  podSelector:
    matchLabels:
      app: jupyter
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-20
      ports:
        - protocol: TCP
          port: 8888
